# forumall

./: .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  LICENSE.md  README.md  package-lock.json  package.json
assets/styling/: main.css  navbar.css
crates/client/: Cargo.toml  Dioxus.toml  package-lock.json  package.json
crates/client/assets/styling/: input.css  main.css
crates/client/src/: api_client.rs  audio.rs  auth_session.rs  client_keys.rs  lib.rs  logging.rs  main.rs  routes.rs  storage.rs  ws_manager.rs
crates/client/src/components/: mod.rs
crates/client/src/components/messages/: article_item.rs  article_modal.rs  memo_item.rs  mod.rs
crates/client/src/components/profile/: mod.rs  presence_indicator.rs  presence_selector.rs  privacy_settings.rs  profile_card.rs  profile_edit_form.rs  profile_popup.rs
crates/client/src/components/ui/: button.rs  card.rs  message_type_selector.rs  mod.rs  permission_checkbox.rs
crates/client/src/hooks/: mod.rs  refreshable_resource.rs
crates/client/src/stores/: messages.rs  mod.rs  presence.rs  profile.rs
crates/client/src/views/: channel_view.rs  home.rs  login.rs  mod.rs  profile_view.rs  register.rs
crates/client/src/views/layouts/: group_sidebar_layout.rs  home_sidebar_layout.rs  mod.rs
crates/client/src/ws/: connection.rs  hooks.rs  manager.rs  mod.rs
crates/client/src/ws/connection/: connection_native.rs  connection_wasm.rs  mod.rs
crates/server/: .env.example  Cargo.toml
crates/server/src/: config.rs  db.rs  main.rs  state.rs  ws.rs
crates/server/src/frontend/: mod.rs
crates/server/src/middleware/: mod.rs  signature.rs
crates/server/src/routes/: auth.rs  avatar.rs  channels.rs  device_keys.rs  discovery.rs  groups.rs  messages.rs  mod.rs  users.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  lib.rs  models.rs  protocol.rs
scripts/: build-web-release  run-dev  run-dev-client  run-dev-css  run-dev-dual  run-dev-server
src/: api_client.rs  auth.rs  auth_session.rs  device_keys.rs  groups.rs  main.rs  messages.rs  models.rs  problem.rs  typed_aurora.rs  users.rs  ws_client.rs
src/auth/: client_keys.rs
src/components/: mod.rs
src/components/ui/: input.rs  mod.rs
src/hooks/: mod.rs  refreshable_resource.rs
src/server/: auth.rs  cors.rs  jwt.rs  middleware.rs  mod.rs  signature.rs  ws.rs
src/views/: channel_view.rs  home.rs  login.rs  mod.rs  navbar.rs  register.rs
src/views/layouts/: channel_layout.rs  group_sidebar_layout.rs  home_sidebar_layout.rs  mod.rs  sidebar_layout.rs
