[package]
name = "forumall"
version = "0.1.0"
authors = ["Lost Connection <seth@lostconnection.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
dioxus = { version = "0.7.2", features = ["router", "fullstack", "logger"] }
dioxus-fullstack = "0.7.2"
dioxus-server = { version = "0.7.2", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
base64 = "0.22.1"
jsonwebtoken = "9.3.1"
once_cell = "1.21.0"
rand = "0.8.5"
rsa = { version = "0.9.8", default-features = false, features = [
    "pem",
    "sha2",
] }
sha2 = "0.10.9"
hex = "0.4.3"
argon2 = { version = "0.5.3", features = ["std"], optional = true }
aurora-db = { version = "0.4.1", optional = true }
uuid = { version = "1.19.0", features = ["v4", "serde", "js"] }
reqwest = { version = "0.12", features = ["json"] }
web-sys = { version = "0.3.70", features = [
    "Window",
    "Storage",
    "console",
], optional = true }
wasm-bindgen = { version = "0.2.104", optional = true }
wasm-bindgen-futures = { version = "0.4.54", optional = true }

# ezsockets = { version = "0.6", default-features = false, features = ["wasm_client"], optional = true }
async-trait = "0.1.52"
futures-util = "0.3.30"

tokio = { version = "1.40", features = ["full"], optional = true }
axum = { version = "0.7", optional = true }

[features]
default = ["web", "server"]
# The feature that are only required for the web build target should be optional and only enabled in the web feature
web = [
    "dioxus/web",
    "dep:web-sys",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
]
# The feature that are only required for the desktop build target should be optional and only enabled in the desktop feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile build target should be optional and only enabled in the mobile feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server build target should be optional and only enabled in the server feature
server = [
    "dioxus/server",
    "dep:dioxus-server",
    "dep:aurora-db",
    "dep:argon2",
    "dep:tokio",
    "dep:axum",
]
