[package]
name = "forumall-client"
version = "0.1.0"
edition = "2021"

[dependencies]
forumall-shared = { path = "../shared" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

# Dioxus
dioxus = { version = "0.7", features = ["router", "web", "logger"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

# WASM
web-sys = { version = "0.3", features = [
    "Window", "Storage", "console",
    "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent", "Event",
    "Document", "Element"
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }

# Async
futures-util = { version = "0.3", features = ["sink"] }
futures-channel = "0.3"
urlencoding = "2.1"
url = "2.5"
