[package]
name = "forumall-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "forumall-server"
path = "src/main.rs"

[dependencies]
forumall-shared = { path = "../shared" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

# Server
axum = { version = "0.8", features = ["ws", "multipart"] }
tokio = { version = "1.40", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
axum-reverse-proxy = "1.1"
aurora-db = "0.4"
argon2 = { version = "0.5", features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

# HTTP client (for federation)
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"

# Async
futures-util = { version = "0.3", features = ["sink"] }
once_cell = "1.21"
async-trait = "0.1"
